--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -1,23 +1,18 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
 
-<h2>Interviews</h2>
-
-<p>
-    <a asp-action="Create" class="btn btn-outline-primary font-italic">Create New</a>
-</p>
-
+    <h2>My Interviews</h2>
 
 <table class="datatable">
     <thead>
         <tr>
 
-           <th> Candidate Name</th>
-           <th>Position</th>
+            <th>Candidate Name</th>
+            <th>Position</th>
             <th>Interviewer</th>
             <th>
                 Date
             </th>
-            <th @*hidden*@>
+            <th hidden>
                 Parent ID
             </th>
 
@@ -30,11 +25,11 @@
             <th>Notes</th>
             <th>Evaluation</th>
             <th>Actions</th>
-          
+            <th></th>
         </tr>
     </thead>
     <tbody>
-        @if(Model!=null)
+      
         @foreach (var item in Model)
         {
             <tr>
@@ -50,7 +45,7 @@
                 <td>
                     @item.Date
                 </td>
-                <td @*hidden*@>
+                <td hidden>
                     @item.ParentId
                 </td>
 
@@ -58,27 +53,29 @@
                     @item.Score
                 </td>
                 <td>
-                    @item.StatusName 
+                    @item.StatusName
                 </td>
 
                 <td>@item.Notes</td>
-                    @if (item.AttachmentId != null)
-                    {
-                        <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
-                    }
-                    else
-                    {
-                        <td></td>
-                    }
-                   
+                @if (item.AttachmentId != null)
+                {
+                    <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
+                }
+                else
+                {
+                    <td> </td>
+                }
+
+              
 
                 <td>
-                   @* <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId" asp-route-idd="@item.StatusId"></a> |*@
-                    <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
-                    <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
+                   @*  <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> | *@
 
+                   
+                    
+                   <a asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-idd="@item.InterviewerId"> Add the interview Result</a>
+                 
                 </td>
-               
             </tr>
         }
     </tbody>
