--- a/CMS/CMS.Web/Views/Notifications/Create.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Create.cshtml
@@ -18,11 +18,11 @@
 
 
 
-    <div class="form-group">
+@*     <div class="form-group">
         <label asp-for="templatesDTO.TemplatesId" class="control-label">Title</label>
         @Html.DropDownListFor(model => model.templatesDTO.TemplatesId, (SelectList)ViewBag.templetList, "Select a Title", new { @class = "form-control" })
         <span asp-validation-for="templatesDTO.TemplatesId" class="text-danger"></span>
-    </div>
+    </div> *@
 
 
     @* <div class="form-group">
