--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -3,13 +3,13 @@
     ViewData["Title"] = "Dashboard";
     ViewData["additionalJS"] =new[]
     {
-        "/theme/libs/apexcharts/apexcharts.min.js",
-        "/dashboard-js/jobx.js",
-        "/dashboard-js/rejected-chart.js",
-        "/theme/libs/jsvectormap/js/jsvectormap.min.js",
-        "/theme/libs/jsvectormap/maps/world-merc.js",
-        "/dashboard-js/countries-hash.js",
-        "/dashboard-js/candidate-sources-map.js"
+        "~/theme/libs/apexcharts/apexcharts.min.js",
+        "~/dashboard-js/jobx.js",
+        "~/dashboard-js/rejected-chart.js",
+        "~/theme/libs/jsvectormap/js/jsvectormap.min.js",
+        "~/theme/libs/jsvectormap/maps/world-merc.js",
+        "~/dashboard-js/countries-hash.js",
+        "~/dashboard-js/candidate-sources-map.js"
     };
     
 }
