Update-Layout menu

--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -444,7 +444,7 @@
         <!-- ========== App Menu ========== -->
         <div class="app-menu navbar-menu">
             <!-- LOGO -->
-            <div class="navbar-brand-box">
+           @* <div class="navbar-brand-box">
                 <!-- Dark Logo-->
                 <a href="/" class="logo logo-dark">
                     <span class="logo-sm">
@@ -466,7 +466,7 @@
                 <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
                     <i class="ri-record-circle-line"></i>
                 </button>
-            </div>
+            </div>*@
 
             <div id="scrollbar">
                 <div class="container-fluid">
@@ -530,14 +530,14 @@
                             //     Label = "Templates",
                             //     Roles = new[] {"Admin"}
                             // },
-                            new
-                            {
-                                Controller =  "AppRoles",
-                                Action = "Index",
-                                Icon = "ri-map-pin-user-fill",
-                                Label = "Roles",
-                                Roles = new[] {"Admin"}
-                            },
+                            //new
+                            //{
+                            //    Controller =  "AppRoles",
+                            //    Action = "Index",
+                            //    Icon = "ri-map-pin-user-fill",
+                            //    Label = "Roles",
+                            //    Roles = new[] {"Admin"}
+                            //},
                             new
                             {
                                 Controller =  "Account",
