--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -33,7 +33,10 @@
     {
         <a class="btn btn-secondary" asp-action="IndexGMnotification">Back to List</a>
     }
-    else{}
+    else
+    {
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+    }
 
 
   
