--- a/CMS/CMS.Web/Views/Notifications/Index.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.NotificationsDTO>
 
+@{
+    ViewData["Title"] = "Notifications";
+}
 
-<h1>Notifications</h1>
 
 @* <p>
 <a class="btn btn-outline-primary font-italic" asp-action="Create">Create New</a>
