--- a/CMS/CMS.Web/Views/SearchInterviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Edit.cshtml
@@ -115,9 +115,9 @@
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group text-end " style="margin-top:10px;">
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-        <input type="submit" value="Save" class="btn btn-outline-primary" />
+        <input type="submit" value="Save" class="btn btn-primary" />
     </div>
 
 </form>
