--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -12,17 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Themesbrand" name="author" />
     <!-- App favicon -->
-    <link rel="shortcut icon" href="~/theme/images/favicon.ico">
+    <link rel="shortcut icon" href="/theme/images/favicon.ico">
     <!-- Layout config Js -->
-    <script src="~/theme/js/layout.js"></script>
+    <script src="/theme/js/layout.js"></script>
     <!-- Bootstrap Css -->
-    <link href="~/theme/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
-    <link href="~/theme/css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css-->
-    <link href="~/theme/css/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/app.min.css" rel="stylesheet" type="text/css" />
     <!-- custom Css-->
-    <link href="~/theme/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/custom.min.css" rel="stylesheet" type="text/css" />
 
 
     <style>
@@ -105,23 +105,23 @@
                        @* <div class="navbar-brand-box horizontal-logo">
                             <a href="/" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="~/theme/images/logo-sm.png" alt="" height="22">
+                                    <img src="/theme/images/logo-sm.png" alt="" height="22">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="~/theme/images/logo-dark.png" alt="" height="17">
+                                    <img src="/theme/images/logo-dark.png" alt="" height="17">
                                 </span>
                             </a>
 
                             <a href="/" class="logo logo-light">
                                 <span class="logo-sm">
-                                    <img src="~/theme/images/logo-sm.png" alt="" height="22">
+                                    <img src="/theme/images/logo-sm.png" alt="" height="22">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="~/theme/images/logo-light.png" alt="" height="17">
+                                    <img src="/theme/images/logo-light.png" alt="" height="17">
                              
                                  </span>
                                 <span class="logo-lg">
-                                    <img src="~/theme/images/candidate-logo.png" alt="" height="17">
+                                    <img src="/theme/images/candidate-logo.png" alt="" height="17">
                                 </span>
                             </a>
                         </div>*@
@@ -184,7 +184,7 @@
                                         <!-- item -->
                                         <a href="javascript:void(0);" class="dropdown-item notify-item py-2">
                                             <div class="d-flex">
-                                                <img src="~/theme/images/users/avatar-2.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
+                                                <img src="/theme/images/users/avatar-2.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
                                                 <div class="flex-grow-1">
                                                     <h6 class="m-0">Angela Bernier</h6>
                                                     <span class="fs-11 mb-0 text-muted">Manager</span>
@@ -194,7 +194,7 @@
                                         <!-- item -->
                                         <a href="javascript:void(0);" class="dropdown-item notify-item py-2">
                                             <div class="d-flex">
-                                                <img src="~/theme/images/users/avatar-3.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
+                                                <img src="/theme/images/users/avatar-3.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
                                                 <div class="flex-grow-1">
                                                     <h6 class="m-0">David Grasso</h6>
                                                     <span class="fs-11 mb-0 text-muted">Web Designer</span>
@@ -204,7 +204,7 @@
                                         <!-- item -->
                                         <a href="javascript:void(0);" class="dropdown-item notify-item py-2">
                                             <div class="d-flex">
-                                                <img src="~/theme/images/users/avatar-5.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
+                                                <img src="/theme/images/users/avatar-5.jpg" class="me-3 rounded-circle avatar-xs" alt="user-pic">
                                                 <div class="flex-grow-1">
                                                     <h6 class="m-0">Mike Bunch</h6>
                                                     <span class="fs-11 mb-0 text-muted">React Developer</span>
@@ -394,7 +394,7 @@
                         <div class="dropdown ms-sm-3 header-item topbar-user">
                             <button type="button" class="btn" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="d-flex align-items-center">
-                                    <img class="rounded-circle header-profile-user" src="~/theme/images/users/avatar-1.jpg" alt="Header Avatar">
+                                    <img class="rounded-circle header-profile-user" src="/theme/images/users/avatar-1.jpg" alt="Header Avatar">
                                     <span class="text-start ms-xl-2">
                                         <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">@User.Identity.Name</span>
                                         <span class="d-none d-xl-block ms-1 fs-12 user-name-sub-text"></span>
@@ -444,29 +444,29 @@
         <!-- ========== App Menu ========== -->
         <div class="app-menu navbar-menu">
             <!-- LOGO -->
-           @* <div class="navbar-brand-box">
-                <!-- Dark Logo-->
+           <div class="navbar-brand-box">
+               @*  <!-- Dark Logo-->
                 <a href="/" class="logo logo-dark">
                     <span class="logo-sm">
-                        <img src="~/theme/images/logo-sm.png" alt="" height="22">
+                        <img src="/theme/images/logo-sm.png" alt="" height="22">
                     </span>
                     <span class="logo-lg">
-                        <img src="~/theme/images/logo-dark.png" alt="" height="17">
+                        <img src="/theme/images/logo-dark.png" alt="" height="17">
                     </span>
                 </a>
                 <!-- Light Logo-->
                 <a href="/" class="logo logo-light">
                     <span class="logo-sm">
-                        <img src="~/theme/images/logo-sm.png" alt="" height="22">
+                        <img src="/theme/images/logo-sm.png" alt="" height="22">
                     </span>
                     <span class="logo-lg">
-                        <img src="~/theme/images/logo-light.png" alt="" height="17">
+                        <img src="/theme/images/logo-light.png" alt="" height="17">
                     </span>
-                </a>
+                </a> *@
                 <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
                     <i class="ri-record-circle-line"></i>
                 </button>
-            </div>*@
+            </div>
 
             <div id="scrollbar">
                 <div class="container-fluid">
@@ -512,7 +512,7 @@
                                 Action = "Index",
                                 Icon = "ri-user-star-fill",
                                 Label = "Candidates",
-                                Roles = new[] {"Admin","HR Manager","General Manager"}
+                                Roles = new[] {"Admin","HR Manager"}
                             },
                             new
                             {
@@ -659,9 +659,9 @@
     </div>
     <!-- END layout-wrapper -->
     <!--start back-to-top-->
-    <button onclick="topFunction()" class="btn btn-danger btn-icon" id="back-to-top">
+   @*  <button onclick="topFunction()" class="btn btn-danger btn-icon" id="back-to-top">
         <i class="ri-arrow-up-line"></i>
-    </button>
+    </button> *@
     <!--end back-to-top-->
     <!--preloader-->
     <div id="preloader">
@@ -700,12 +700,12 @@
  *@
 
     <!-- JAVASCRIPT -->
-    <script src="~/theme/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/theme/libs/simplebar/simplebar.min.js"></script>
-    <script src="~/theme/libs/node-waves/waves.min.js"></script>
-    <script src="~/theme/libs/feather-icons/feather.min.js"></script>
-    <script src="~/theme/js/pages/plugins/lord-icon-2.1.0.js"></script>
-    <script src="~/theme/js/plugins.js"></script>
+    <script src="/theme/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/theme/libs/simplebar/simplebar.min.js"></script>
+    <script src="/theme/libs/node-waves/waves.min.js"></script>
+    <script src="/theme/libs/feather-icons/feather.min.js"></script>
+    <script src="/theme/js/pages/plugins/lord-icon-2.1.0.js"></script>
+    <script src="/theme/js/plugins.js"></script>
     @{
         string[] scripts = ViewData["additionalJS"] as string[];
         if(scripts != null )
@@ -718,7 +718,7 @@
     }
     
     <!-- App js -->
-    <script src="~/theme/js/app.js"></script>
+    <script src="/theme/js/app.js"></script>
 
 
 
