--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -6,24 +6,67 @@
 <form asp-action="Create" id="createForm">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+
     <div class="form-group">
+
+        <label asp-for="CandidateId" class="control-label">Candidate</label>
+        @if (ViewBag.candidateList != null)
+        {
+            <select asp-for="CandidateId" asp-items="@(ViewBag.candidateList)" class="form-control">
+                <option value="">Select a Name</option>
+
+            </select>
+        }
+
+        <span asp-validation-for="CandidateId" class="text-danger"></span>
+    </div>
+   @*  <div class="form-group">
         <label asp-for="CandidateId" class="control-label">Candidate Name</label>
         @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
         <span asp-validation-for="CandidateId" class="text-danger"></span>
-    </div>
+    </div> *@
+
 
     <div class="form-group">
+
+        <label asp-for="PositionId" class="control-label">Position</label>
+        @if (ViewBag.positionList != null)
+        {
+            <select asp-for="PositionId" asp-items="@(ViewBag.positionList)" class="form-control">
+                <option value="">Select a Position</option>
+
+            </select>
+        }
+
+        <span asp-validation-for="PositionId" class="text-danger"></span>
+    </div>
+  @*   <div class="form-group">
         <label asp-for="PositionId" class="control-label">Position</label>
         @Html.DropDownListFor(model => model.PositionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
         <span asp-validation-for="PositionId" class="text-danger"></span>
-    </div>
+    </div> *@
+
 
     <div class="form-group">
-        <label asp-for="InterviewerId" class="control-label"></label>
+
+        <label asp-for="InterviewerId" class="control-label">Interviewer</label>
+        @if (ViewBag.interviewersList != null)
+        {
+            <select asp-for="InterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
+                <option value="">Select an Interviewer</option>
+
+            </select>
+        }
+
+        <span asp-validation-for="InterviewerId" class="text-danger"></span>
+    </div>
+
+  @*   <div class="form-group">
+        <label asp-for="InterviewerId" class="control-label">Interviewer</label>
         @Html.DropDownListFor(model => model.InterviewerId, (SelectList)ViewBag.interviewersList, "Select an Interviewer", new { @class = "form-control" })
         <span asp-validation-for="InterviewerId" class="text-danger"></span>
 
-    </div>
+    </div> *@
     <div class="form-group">
         <label asp-for="Date" class="control-label"></label>
         <input asp-for="Date" class="form-control" />
@@ -44,7 +87,7 @@
     </div>
 
 </form>
-<p>@Html.ValidationSummary()</p>
+@* <p>@Html.ValidationSummary()</p> *@
 <script>
     document.getElementById("createForm").onsubmit=function(){
         return confirmCreate();
