--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -12,22 +12,22 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CandidateId)
+            @Html.DisplayNameFor(model => model.FullName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CandidateId)
+            @Html.DisplayFor(model => model.FullName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PositionId)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PositionId)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.InterviewerId)
+            Interviewer
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InterviewerId)
+            @Html.DisplayFor(model => model.InterviewerName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
@@ -35,13 +35,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
-       @* <dt class="col-sm-2" hidden>
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-        <dd class="col-sm-10" hidden>
-            @Html.DisplayFor(model => model.ParentId)*@
-        </dd>
-
+   
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Score)
         </dt>
@@ -49,7 +43,7 @@
             @Html.DisplayFor(model => model.Score)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StatusName)
+            Status
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StatusName)
@@ -62,7 +56,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" class="text-end">
          <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
     </form>
