--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -11,13 +11,13 @@
             Candidate Name
         </dt>
         <dd class="col-sm-10">
-            @Model.CandidateName
+            @Model.FullName
         </dd>
         <dt class="col-sm-2">
             Position
         </dt>
         <dd class="col-sm-10">
-            @Model.PositionName
+            @Model.Name
         </dd>
         <dt class="col-sm-2">
             Interviewer Name
@@ -34,10 +34,7 @@
         <dt class="col-sm-2" hidden>
             Parent ID
         </dt>
-       @* <dd class="col-sm-10" hidden>
-            @Model.ParentId
-        </dd>*@
-
+      
         <dt class="col-sm-2">
             Score
         </dt>
@@ -60,8 +57,8 @@
 
     </dl>
 </div>
-<div class="form-group">
+<div class="form-group text-end">
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-   @* <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>*@
+    <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
     
 </div>
