--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -7,10 +7,18 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header d-flex align-items-center">
-                <h5 class="card-title mb-0 flex-grow-1">Interviews</h5>
-                <div>
-                    <a asp-action="Create" class="btn btn-primary">Schedule New Interview</a>
-                </div>
+
+                @if (User.IsInRole("Admin"))
+                {
+                    
+                }
+                else
+                {
+                    <div>
+                        <a asp-action="Create" class="btn btn-primary">Schedule New Interview</a>
+                    </div>
+                }
+                
             </div>
             <div class="card-body">
                 <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
@@ -50,7 +58,7 @@
                                     <td></td>
                                 }
                             <td>
-                               @* <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId" asp-route-idd="@item.StatusId"></a> |*@
+                               <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId" asp-route-idd="@item.StatusId"></a> |
                                 <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
                                 <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
                             </td>
