--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -4,6 +4,7 @@
 }
 
 
+
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -25,7 +26,8 @@
                             <th>Status</th>
                             <th>Notes</th>
                             <th>Evaluation</th>
-                            <th>Actions</th>
+                            <th>Details</th>
+                            <th>Add Result</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -49,8 +51,10 @@
                                     <td> </td>
                                 }
                                 <td>
-                                    <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
-                                    <a asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-idd="@item.InterviewerId"> Add the interview Result</a>
+                                    <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> 
+                                </td>
+                                <td >
+                                    <a asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-idd="@item.InterviewerId" style="color:#007bff;text-decoration: none;background-color: #f0f0f0;padding: 5px 10px;border-radius: 4px;"> Add Result</a>
                                 </td>
                             </tr>
                         }
