--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -54,13 +54,16 @@
         <input type="file" id="file" name="file" class="form-control-file" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <div class="form-group text-end">
+        <a class="btn btn-secondary" asp-action="MyInterviews">Back to Interview List</a>
+        <button type="submit" class="btn btn-primary">Save</button>
+
+    </div>
 </form>
 
 
 
 
-<a asp-action="MyInterviews">Back to Interview List</a>
 
 <p>@Html.ValidationSummary()</p>
 <script>
