--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.InterviewerId)
+            Interviewer
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InterviewerId)
+            @Html.DisplayFor(model => model.InterviewerName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
@@ -49,7 +49,7 @@
             @Html.DisplayFor(model => model.Score)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StatusName)
+            Status
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StatusName)
@@ -62,7 +62,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" class="text-end">
          <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
     </form>
