--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -14,7 +14,7 @@
             @Model.FullName
         </dd>
         <dt class="col-sm-2">
-            Postion
+            Position
         </dt>
         <dd class="col-sm-10">
             @Model.Name
@@ -60,7 +60,7 @@
 
     </dl>
 </div>
-<div class="form-group">
+<div class="form-group text-end">
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
     
