--- a/CMS/CMS.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_LayoutLogin.cshtml
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Themesbrand" name="author" />
     <!-- App favicon -->
-    <link rel="shortcut icon" href="~/theme/images/favicon.ico">
+    <link rel="shortcut icon" href="/theme/images/favicon.ico">
 
     <!-- Layout config Js -->
-    <script src="~/theme/js/layout.js"></script>
+    <script src="/theme/js/layout.js"></script>
     <!-- Bootstrap Css -->
-    <link href="~/theme/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
-    <link href="~/theme/css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css-->
-    <link href="~/theme/css/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/app.min.css" rel="stylesheet" type="text/css" />
     <!-- custom Css-->
-    <link href="~/theme/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="/theme/css/custom.min.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -44,7 +44,7 @@
                         <div class="text-center mt-sm-5 mb-4 text-white-50">
                            @* <div>
                                 <a href="/" class="d-inline-block auth-logo">
-                                    <img src="~/theme/images/logo-light.png" alt="" height="20">
+                                    <img src="/theme/images/logo-light.png" alt="" height="20">
                                 </a>
                             </div>*@
                             <p class="mt-3 fs-15 fw-medium">Candidate Management System</p>
@@ -90,19 +90,19 @@
     </div>
     <!-- end auth-page-wrapper -->
     <!-- JAVASCRIPT -->
-    <script src="~/theme/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/theme/libs/simplebar/simplebar.min.js"></script>
-    <script src="~/theme/libs/node-waves/waves.min.js"></script>
-    <script src="~/theme/libs/feather-icons/feather.min.js"></script>
-    <script src="~/theme/js/pages/plugins/lord-icon-2.1.0.js"></script>
-    <script src="~/theme/js/plugins.js"></script>
+    <script src="/theme/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/theme/libs/simplebar/simplebar.min.js"></script>
+    <script src="/theme/libs/node-waves/waves.min.js"></script>
+    <script src="/theme/libs/feather-icons/feather.min.js"></script>
+    <script src="/theme/js/pages/plugins/lord-icon-2.1.0.js"></script>
+    <script src="/theme/js/plugins.js"></script>
 
     <!-- particles js -->
-    <script src="~/theme/libs/particles.js/particles.js"></script>
+    <script src="/theme/libs/particles.js/particles.js"></script>
     <!-- particles app js -->
-    <script src="~/theme/js/pages/particles.app.js"></script>
+    <script src="/theme/js/pages/particles.app.js"></script>
     <!-- password-addon init -->
-    <script src="~/theme/js/pages/password-addon.init.js"></script>
+    <script src="/theme/js/pages/password-addon.init.js"></script>
 </body>
 
 
