--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -62,7 +62,7 @@
 
 <a asp-action="MyInterviews">Back to Interview List</a>
 
-<p>@Html.ValidationSummary()</p>
+@*<p>@Html.ValidationSummary()</p>*@
 <script>
     document.getElementById("updateForm").onsubmit = function () {
         return confirmCreate();
