--- a/CMS/CMS.Web/Views/Account/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Account/Edit.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Edit User</h2>
 
-<form asp-action="Edit" method="post" asp-route-id="@user.GetUserId(User)">
+<form asp-action="Edit" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group"><input type="hidden" asp-for="RegisterrId" /></div>
     <div class="form-group">
