--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -11,13 +11,13 @@
             Candidate Name
         </dt>
         <dd class="col-sm-10">
-            @Model.CandidateName
+            @Model.FullName
         </dd>
         <dt class="col-sm-2">
             Position
         </dt>
         <dd class="col-sm-10">
-            @Model.PositionName
+            @Model.Name
         </dd>
         <dt class="col-sm-2">
             Interviewer Name
@@ -61,7 +61,14 @@
     </dl>
 </div>
 <div class="form-group">
-    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+    @{
+        string returnAction = "Index";
+        if (ViewBag.PreviousAction== "MyInterviews")
+        {
+            returnAction = "MyInterviews";
+        }
+    }
+    <a class="btn btn-secondary"  asp-action="@returnAction">Back to List</a>
    @* <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>*@
     
 </div>
