--- a/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/IndexHRnotification.cshtml
@@ -20,7 +20,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var notification in Model)
+                        @foreach (var notification in Model.Reverse())
         {
             <tr>
 
