--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -54,10 +54,17 @@
             @Model.Notes
         </dd>
 
+        <dt class="col-sm-2">
+            AttachmentId:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.AttachmentId
+        </dd>
+
 
     </dl>
 </div>
-<div class="form-group">
+<div class="form-group text-end">
     @{
         string returnAction = "Index";
         if (ViewBag.PreviousAction== "MyInterviews")
@@ -66,6 +73,6 @@
         }
     }
     <a class="btn btn-secondary"  asp-action="@returnAction">Back to List</a>
-   @* <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>*@
+   <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
     
 </div>
