--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -50,6 +50,9 @@
         <input asp-for="Notes" class="form-control" />
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <input asp-for="AttachmentId" class="form-control" hidden />
+    </div>
 
     <div class="form-group text-end " style="margin-top:10px;">
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
@@ -58,4 +61,14 @@
 
 </form>
 
-<p>@Html.ValidationSummary()</p>
+<form asp-action="UpdateAttachment" asp-route-id="@Model.InterviewsId" enctype="multipart/form-data">
+    <div class="form-group">
+        <label for="file">Upload Attachment:</label>
+        <input type="file" id="file" name="file" class="form-control-file" required />
+    </div>
+    <!-- Add other fields similarly -->
+    <div class="form-group">
+        <input type="submit" value="upload" class="btn btn-primary" />
+    </div>
+
+</form>
