--- a/CMS/CMS.Web/Views/Notifications/Index.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Index.cshtml
@@ -27,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var notification in Model)
+        @foreach (var notification in Model.Reverse())
         {
             <tr>
              
