--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -57,6 +57,14 @@
             @Model.Notes
         </dd>
 
+        <dt class="col-sm-2">
+            AttachmentId:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.AttachmentId
+        </dd>
+
+
 
     </dl>
 </div>
