--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -3,19 +3,18 @@
     ViewData["Title"] = "Dashboard";
     ViewData["additionalJS"] =new[]
     {
-        "/theme/libs/apexcharts/apexcharts.min.js",
-        "/dashboard-js/jobx.js",
-        "/dashboard-js/rejected-chart.js",
-        "/theme/libs/jsvectormap/js/jsvectormap.min.js",
-        "/theme/libs/jsvectormap/maps/world-merc.js",
-        "/dashboard-js/countries-hash.js",
-        "/dashboard-js/candidate-sources-map.js"
+        "/CMS/theme/libs/apexcharts/apexcharts.min.js",
+        "/CMS/dashboard-js/jobx.js",
+        "/CMS/dashboard-js/rejected-chart.js",
+        "/CMS/theme/libs/jsvectormap/js/jsvectormap.min.js",
+        "/CMS/theme/libs/jsvectormap/maps/world-merc.js",
+        "/CMS/dashboard-js/countries-hash.js",
+        "/CMS/dashboard-js/candidate-sources-map.js"
     };
     
 }
 
 <div class="row">
-
     <div class="col-md-4">
         <div class="card card-animate">
             <div class="card-body">
