--- a/CMS/CMS.Web/Views/Dashboard/Index.cshtml
+++ b/CMS/CMS.Web/Views/Dashboard/Index.cshtml
@@ -14,6 +14,8 @@
     
 }
 
+
+
 <div class="row">
 
     <div class="col-md-4">
@@ -122,6 +124,64 @@
     </div>
 </div>
 
+
+
+
+
+
+
+
+
+
+
+
+<div class="card card-height-100">
+    <div class="card">
+        <div class="card-header">
+            <h4 class="card-title mb-0">Tree Chart</h4>
+        </div><!-- end card header -->
+
+        <div class="card-body">
+            <div class="container">
+                <div class="accordion" id="countryAccordion">
+                    @foreach (var country in ViewBag.TreeData)
+                    {
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="countryheading-@country.Id">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#countrycollapse-@country.Id">
+                                    @country.Name
+                                </button>
+                            </h2>
+                            <div id="countrycollapse-@country.Id" class="accordion-collapse collapse">
+                                <div class="accordion-body">
+                                    <ul class="list-group">
+                                        @foreach (var position in country.Positions)
+                                        {
+                                            <li class="list-group-item">
+                                                <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#positioncollapse-@position.Id">
+                                                    @position.Name
+                                                </button>
+                                                <div id="positioncollapse-@position.Id" class="collapse">
+                                                    <ul class="list-group">
+                                                        @foreach (var candidate in position.Candidates)
+                                                        {
+                                                            <li class="list-group-item">@candidate.FullName</li>
+                                                        }
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+
+        </div><!-- end card-body -->
+    </div><!-- end card -->
+</div>
 
 
 
