--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -78,7 +78,7 @@
 
     <div class="form-group">
         <label for="file">Upload CV:</label>
-        <input type="file" id="file" name="file" class="form-control-file" required/>
+        <input type="file" id="file" name="file" class="form-control-file"/>
         <span asp-validation-for="FileData" class="text-danger"></span>
 
     </div>
