--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -33,13 +33,36 @@
         <input asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
- 
+
+
+   @*  @if ((User.IsInRole("HR Manager") || User.IsInRole("Admin")) && Model.StatusName == "Pending")
+    {
+        
+    }
+    else
+    {
+        <div class="form-group">
+            <label asp-for="Score" class="control-label"></label>
+            <input asp-for="Score" class="form-control" />
+            <span asp-validation-for="Score" class="text-danger"></span>
+        </div>
+    } *@
 
     <div class="form-group">
-        <label asp-for="Score" class="control-label"></label>
-        <input asp-for="Score" class="form-control" />
-        <span asp-validation-for="Score" class="text-danger"></span>
+        <label asp-for="Score" class="control-label">Score</label>
+        @if ((User.IsInRole("HR Manager") || User.IsInRole("Admin")) && Model.StatusName == "Pending")
+        {
+            <p>The score cannot be set for pending interviews by HR Managers or Admins.</p>
+        }
+        else
+        {
+            <input asp-for="Score" class="form-control" />
+            <span asp-validation-for="Score" class="text-danger"></span>
+        }
     </div>
+
+
+  
     <div class="form-group">
         <label asp-for="StatusId" class="control-label">Status</label>
         @Html.DropDownListFor(model => model.StatusId, (SelectList)ViewBag.statusList, "Select an Interviewer", new { @class = "form-control" })
