--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -480,7 +480,7 @@
                     Action = "Index",
                     Icon = "ri-dashboard-fill",
                     Label = "Dashboard",
-                    Roles = new[] {"Admin","General Manager"}
+                    Roles = new[] {"Admin","General Manager","HR Manager"}
                     },
                     new
                     {
